完成0.3-beta版本